Added MongoDB implementation of Swagger
